# Ego-Exo-Task-Relevance-Filtering-Pipeline

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
configs/: filter_policy_v0.yaml  filter_policy_v1.yaml
docs/: annotation_protocol.md  annotator_quickstart.zh-CN.md  filtering_v0_report_template.md  filtering_v1_workflow.zh-CN.md
schemas/: filtered_split.schema.json  same_take_negative_index.schema.json  take_relevance_scores.schema.json
tests/: test_pipeline_smoke.py
tools/: __init__.py  apply_relevance_ranker.py  audit_filtered_split.py  build_annotation_review_pack.py  build_filtered_npz.py  build_filtered_split.py  build_phase_diagnostic_set.py  build_same_take_negative_index.py  build_transition_selection.py  common.py  export_annotation_csv.py  extract_relevance_features.py  make_take_contact_sheets.py  summarize_annotation_calibration.py  train_relevance_ranker.py  validate_annotations.py
