[project]
name = "egoexo-task-relevance-filtering"
version = "0.1.0"
description = "Task-relevance filtering pipeline for Ego-Exo coarse loco-manipulation FACT training data."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "pillow>=9.0",
  "pyyaml>=6.0",
  "scikit-learn>=1.2",
  "joblib>=1.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
